Closed
Bug 1659902
Opened 5 years ago
Closed 5 years ago
Assertion PR_GetPageSize() == alignof(ReadOnlyPage)
Categories
(Core :: XPConnect, defect, P2)
Core
XPConnect
Tracking
()
RESOLVED
FIXED
81 Branch
| Tracking | Status | |
|---|---|---|
| firefox81 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
No description provided.
| Assignee | ||
Comment 1•5 years ago
|
||
Eventually we'll have to adjust on x86_64 mac too if we want to be able
to run some tests under Rosetta, but let's leave that for another day.
Updated•5 years ago
|
Severity: -- → S3
Priority: -- → P2
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/074e80a244d6
Account for the larger page size on arm64 mac for ReadOnlyPage. r=mccr8
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox81:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 81 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•