Bug 1659902 - Account for the larger page size on arm64 mac for ReadOnlyPage. r=mccr8

Eventually we'll have to adjust on x86_64 mac too if we want to be able
to run some tests under Rosetta, but let's leave that for another day.

Differential Revision: https://phabricator.services.mozilla.com/D87549