js/xpconnect/src/xpcpublic.h
@@ -668,7 +668,11 @@ void AddGCCallback(xpcGCCallback cb);
 void RemoveGCCallback(xpcGCCallback cb);
 
 // We need an exact page size only if we run the binary in automation.
+#if defined(XP_DARWIN) && defined(__aarch64__)
+const size_t kAutomationPageSize = 16384;
+#else
 const size_t kAutomationPageSize = 4096;
+#endif
 
 struct alignas(kAutomationPageSize) ReadOnlyPage final {
   bool mNonLocalConnectionsDisabled = false;
